Prevent overflow of text in autocomplete

--- a/app/assets/stylesheets/autocomplete.css.scss
+++ b/app/assets/stylesheets/autocomplete.css.scss
@@ -61,7 +61,6 @@ body.user.edit .box.show {
     font-family: $sansSerif;
     font-size: emize(13);
     clear: both;
-    white-space: nowrap;
     color: #000;
   }
 
